# BogoScript

./: .gitignore  Args.hpp  BogoScript.sln  BogoScript.vcxproj  BogoScript.vcxproj.filters  Boolean.hpp  CMakeLists.txt  Comparison.hpp  CoreLanguage.hpp  Doxyfile  ErrorValue.hpp  Functions.hpp  Integer.hpp  Literal.hpp  Main.bogo  Main.cpp  NullValue.hpp  README.md  Scope.hpp  StandardLibrary.hpp  StandardNativeFunctions.cpp  StandardNativeFunctions.hpp  Streams.cpp  Streams.hpp  String.cpp  String.hpp  Type.hpp  TypeValueCompound.cpp  TypeValueCompound.hpp  Value.hpp  Variables.hpp  bogoscript.hpp
BogoScript/: BogoScript.cpp  BogoScript.h  CMakeLists.txt  ExampleMain.cpp  example_main.cpp
BogoScript/include/: bogoscript.h
BogoScript/include/core/: runtime_manager.h  type_value_compound.h  value.h
BogoScript/include/typing/: boolean.h  integer.h  literal.h  primitive.h  type_flag.h
BogoScript/source/: example_main.cpp
BogoScript/source/core/: runtime_manager.cpp
BogoScript/source/typing/: boolean.cpp  integer.cpp
